# classifier-tournament-mlflow

./: .gitignore  README.md  classification_model_comparison_with_scaling.ipynb  classification_model_comparison_without_scaling.ipynb  mlflow.db  pyproject.toml
mlruns/1/3a64267cdbf2462390b7288ab2ef7791/artifacts/: metric_info.json
mlruns/1/d397992296be4ef78c217ef93cc329a8/artifacts/: estimator.html
mlruns/1/e4043ed711544d9093a317014e65a179/artifacts/: estimator.html
mlruns/1/models/m-02cedeb456cc4baa8ba50ab85590bff6/artifacts/: MLmodel
mlruns/1/models/m-072650f28e434c5e9f91bfd41efc4368/artifacts/: MLmodel
mlruns/1/models/m-7afaf1c6561d405bb9cb395efb38abb3/artifacts/: MLmodel
mlruns/2/2728b4fea67c411ba25a097a41fc5ced/artifacts/: estimator.html
mlruns/2/5f01ea93b03b4f7ba1ef9ae92917d123/artifacts/: estimator.html  metric_info.json
mlruns/3/13194751246d4c09a0cc0c712b752930/artifacts/: estimator.html
mlruns/3/2cef973e1c9948dc9167638d4165a011/artifacts/: estimator.html
mlruns/3/452481223e1a436d970f351ea910878a/artifacts/: estimator.html
mlruns/3/655dbbc3eacb4179917e0a13ba921cd4/artifacts/: estimator.html
mlruns/3/6ddc60fb141645d49a38973ef52f789c/artifacts/: estimator.html
mlruns/3/9449d6ab8a044e84b5a02c7dcad93380/artifacts/: estimator.html
mlruns/3/b89b7eb08d224a8999b3c5a7740f8dfc/artifacts/: estimator.html
mlruns/3/bd6c5ebe42be4e73be18aac18435c828/artifacts/: estimator.html
mlruns/3/bdfef55e5fe0445d851ddd0aea1b6ea3/artifacts/: estimator.html
mlruns/3/c53afc6feb96459583ee8709b89d4adb/artifacts/: estimator.html
(+25 files in other folders)
