[project]
name = "classifier-tournament-mlflow"
version = "0.1.0"
description = "Classification model experiments using Scikit-learn pipelines and MLflow tracking."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
